--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport"
         content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
+        <script src="js/Landliste.js"></script>
     </head>
     
     <body>
@@ -15,23 +16,23 @@
                 <label>
                     Name:
                     <input type="text" name="name" required>
-                </label>
+                </label> <br>
                 <label>
                     Platz 1:
                     <select class="landDropdown" id="P1"></select>
-                </label>
+                </label><br>
                 <label>
                     Platz 2:
                     <select class="landDropdown" id="P2"></select>
-                </label>
+                </label><br>
                 <label>
                     Platz 3:
                     <select class="landDropdown" id="P3"></select>
-                </label>
+                </label><br>
                 <label>
                     Platz 4:
                     <select class="landDropdown" id="P4"></select>
-                </label>
+                </label><br>
                 <label>
                     Platz 5:
                     <select class="landDropdown" id="P5"></select>
