--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <label>
                     Platz 5:
                     <select class="landDropdown" id="P5"></select>
-                </label>
+                </label><br>
                 <button type="submit">Absenden</button>
             </form>
         </div>
