--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
             </form>
         </div>
         <script src="js/FormUsage.js"></script>
+        <script src="js/GoogleConnection.js"></script>
     </body>
 </html>
