--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                 <button type="submit">Absenden</button>
             </form>
         </div>
+
         <script src="js/FormUsage.js"></script>
         <script src="js/GoogleConnection.js"></script>
+
+        <a href="Auswertung.html">Auswertung</a>
     </body>
 </html>
