--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
         <script src="js/Landliste.js"></script>
+        <script src="js/pullSheet.js"></script>
     </head>
     
     <body>
