--- a/Auswertung.html
+++ b/Auswertung.html
@@ -13,6 +13,6 @@
             <ul id="laenderListe"></ul>
         </div>
 
-        <script src="js/Resultatszuweisung.js"></script>
+        <script type="module" src="js/Resultatszuweisung.js"></script>
     </body>
 </html>
