--- a/Auswertung.html
+++ b/Auswertung.html
@@ -13,6 +13,8 @@
             <ul id="laenderListe"></ul>
         </div>
 
+        <button type="submit" id="ShowSheet">Zeig Google Sheet</button>
+        
         <script type="module" src="js/Resultatszuweisung.js"></script>
     </body>
 </html>
