--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     
     <body>
-        <h1>ESC 2025 Wettbüro</h1>
+        <h1>ESC 2025 Wettbüro!</h1>
         
         <div id=">Wetteintrag">
             <form id="Inputs">
