--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport"
         content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
-        <script src="js/Landliste.js"></script>
+        <script src="js/landliste.js"></script>
     </head>
     
     <body>
@@ -41,9 +41,9 @@
             </form>
         </div>
 
-        <script src="js/FormUsage.js"></script>
-        <script src="js/GoogleConnection.js"></script>
+        <script src="js/formusage.js"></script>
+        <script src="js/googleconnection.js"></script>
 
-        <a href="Auswertung.html">Auswertung</a>
+        <a href="auswertung.html">Auswertung</a>
     </body>
 </html>
