--- a/Auswertung.html
+++ b/Auswertung.html
@@ -5,7 +5,7 @@
         <meta name="viewport"
         content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
-        <script src="js/Landliste.js"></script>
+        <script src="js/landliste.js"></script>
     </head>
     
     <body>
@@ -15,6 +15,6 @@
 
         <button type="submit" id="ShowSheet">Zeig Google Sheet</button>
         
-        <script type="module" src="js/Resultatszuweisung.js"></script>
+        <script type="module" src="js/resultatszuweisung.js"></script>
     </body>
 </html>
