--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
         <script src="js/formusage.js"></script>
         <script src="js/googleconnection.js"></script>
 
-        <a href="auswertung.html">Auswertung</a>
+        <a href="auswertung.html">Auswertungslink</a> 
     </body>
 </html>
