--- a/auswertung.html
+++ b/auswertung.html
@@ -13,7 +13,7 @@
             <ul id="laenderListe"></ul>
         </div>
 
-        <button type="submit" id="ShowSheet">Zeig Google Sheet</button>
+        <button id="ShowSheet">Zeig Google Sheet</button>
         
         <script type="module" src="js/resultatszuweisung.js"></script>
     </body>
