--- a/auswertung.html
+++ b/auswertung.html
@@ -13,6 +13,9 @@
             <ul id="laenderListe"></ul>
         </div>
 
+        <div id="Sheet">
+            <ul id="sheetDaten"></ul>
+        </div>
         <button id="ShowSheet">Zeig Google Sheet</button>
         
         <script type="module" src="js/resultatszuweisung.js"></script>
